[package]
edition = "2018"
name = "software-raytracer-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = {path = "bindings"}
bytemuck = {version = "1.4", features = ["derive"]}
futures = "0.3.15"
raw-window-handle = "0.3.3"
wgpu = "0.9.0"
windows = "0.17.2"
winit = "0.24.0"
