[package]
edition = "2018"
name = "software-raytracer-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
futures = "0.3.15"
image = "0.23.14"
raw-window-handle = "0.3.3"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0"
wgpu = "0.9.0"
winit = "0.24.0"
